src/objects/Q9__BatchLog__c.object
<CustomObject>
    <description>It&apos;s object for temporary records, please DO NOT use this object for your targets.</description>
    <fields>
        <fullName>Q9__JobId__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__RecordTypeName__c</fullName>
        <label>RecordTypeName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__RecordType__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Type_String__c</fullName>
        <label>Type String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Type__c</fullName>
        <description>Show to which one batch log is related.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Population Batch Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Log</label>
    <listViews>
        <fullName>Q9__All</fullName>
        <columns>NAME</columns>
        <columns>Q9__Type__c</columns>
        <columns>Q9__ObjectName__c</columns>
        <columns>Q9__RecordType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>BatchLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>